[metadata]
name = pytax
version = 0.0.1
classifiers =
    Programming Language :: Python :: 3

[options]
packages = taxcli
python_requires = >=3.7
install_requires = pydantic==1.10.7

[options.entry_points]
console_scripts =
    pytax = taxcli.__main__:main

[options.packages.find]
exclude =
    tests*
